--- a/src/app/components/admin/admin-calendar/admin-calendar-new/admin-calendar-new.component.html
+++ b/src/app/components/admin/admin-calendar/admin-calendar-new/admin-calendar-new.component.html
@@ -119,8 +119,8 @@
                                 <label>Body Date 1</label>
                                 <editor [apiKey]="mceApiKey"
                                         [init]="mceConfig"
-                                        id="body"
-                                        [formControl]="newCalForm.controls['body']">
+                                        id="body1"
+                                        [formControl]="newCalForm.controls['body1']">
                                 </editor>
                             </div>
                         </mat-expansion-panel>
@@ -174,7 +174,7 @@
                                 <label>Body Date 2</label>
                                 <editor [apiKey]="mceApiKey"
                                         [init]="mceConfig"
-                                        id="body"
+                                        id="body2"
                                         [formControl]="newCalForm.controls['body2']">
                                 </editor>
                             </div>
@@ -229,7 +229,7 @@
                                 <label>Body Date 3</label>
                                 <editor [apiKey]="mceApiKey"
                                         [init]="mceConfig"
-                                        id="body"
+                                        id="body3"
                                         [formControl]="newCalForm.controls['body3']">
                                 </editor>
                             </div>
@@ -285,7 +285,7 @@
                                 <label>Body Date 4</label>
                                 <editor [apiKey]="mceApiKey"
                                         [init]="mceConfig"
-                                        id="body"
+                                        id="body4"
                                         [formControl]="newCalForm.controls['body4']">
                                 </editor>
                             </div>
