Added new 2020 logo and started on the grandchild navbar flyouts

--- a/src/app/components/core/footer/footer.component.html
+++ b/src/app/components/core/footer/footer.component.html
@@ -2,8 +2,8 @@
     <div class="container-fluid" style="max-width:1200px;">
         <div class="row">
             <div class="col-md-3">
-                <img src="https://s3.amazonaws.com/DDW/ddw-org/images/logos/DDW_50_Yrs_Stand-alone_logo_gold_on_dark_rgb.png"
-                     alt="DDW 50 years logo"
+                <img [src]="logo"
+                     alt="DDW logo"
                      class="img-fluid mb-3">
             </div>
             <div class="col-md-6">
