Fixed issue where ads were being cut off in desktop view

--- a/src/app/components/pages/register/register.component.html
+++ b/src/app/components/pages/register/register.component.html
@@ -241,7 +241,8 @@
                 <div class="text-center">
                     <div [innerHTML]="footerbar | safeHtml"
                          ddwRunScripts
-                         id="myAdSpace"></div>
+                         id="myAdSpace">
+                    </div>
                 </div>
             </div>
         </div>
